--- a/EthSwitcher/EthSwitcher.csproj
+++ b/EthSwitcher/EthSwitcher.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>NameDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="NetworkAdapterController.cs" />
+    <Compile Include="NetworkUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
